fixed flip card spacing, swapped out onward tech demo video and neighbourly quiz image

--- a/components/FlipCard/FlipCard.module.css
+++ b/components/FlipCard/FlipCard.module.css
@@ -42,6 +42,7 @@
 .backFace {
     background: #eaeaea;
     transform: rotateY(180deg);
+    padding: 2rem;
 }
 
 /* Shared content wrapper */
